--- a/style.css
+++ b/style.css
@@ -16,12 +16,16 @@ main{
 }
 
 .step-box{
+	float: left;
 	width: 300px;
+	margin-right: 30px;
 	padding: 10px;
-    margin: 0 auto;
-    margin-bottom: 20px;
 	position: relative;
 	border: 1px solid #eee;
+}
+
+.step-box:last-child{
+	margin-right: 0;
 }
 
 .step-img1{
@@ -57,4 +61,16 @@ main{
 
 .title{
 	margin: 15px 0 5px;
+}
+
+/* タブレット縦置きサイズ(768px)程度の画面の大きさ以下に適用される設定です */
+@media screen and (max-width:768px) {
+	.step-box{
+		float: none;
+		width: 90%;
+		margin: 0 auto;
+        margin-bottom: 20px;
+	    position: relative;
+	    border: 1px solid #eee;
+	}
 }
